# ai-events

./: .gitignore  AGENT_TODO.md  PROJECT_PLAN.md  README.md  README_old.md  check_event_counts.py  check_parsers.py  cleanup_events.py  event_parser_template.py  index.html  migrate_to_json.py  netlify.toml  package.json  pyproject.toml
.windsurf/: commands.json
launchd/: com.ai.events.weekly.plist
scripts/: install-launchd.sh  uninstall-launchd.sh
src/ai_events/: classify.py  cli.py  config.py  db.py  ics.py  models.py  report.py  score.py  static_events.json  utils.py
src/ai_events.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/ai_events/fetch/: __init__.py  base.py  rules.yml  static_loader.py
src/ai_events/fetch/parsers/: __init__.py  advise_ai.py  ai4_vegas.py  ai_compute_nyc.py  ai_expo_africa.py  ai_finance_summit_london.py  ai_finance_summit_ny.py  ai_financial_services_conf.py  ai_for_agencies_summit.py  ai_for_finance_summit_paris.py  ai_for_marketers_summit.py  ai_summit_london.py  ai_summit_london_2026.py  ai_summit_nyc.py  aiconf_sf.py  anthropic_code_with_claude.py  apple_wwdc.py  austin_ai.py  aws_reinvent.py  caio_berlin.py  caio_boston.py  caio_london.py  caio_london_dec.py  cdao_defense.py  data_ai_summit.py  dcd_connect_compute_ny.py  deepfest_riyadh.py  dotai.py  dreamforce.py  dubai_ai.py  dubai_ai_week.py  finovatefall.py  fintech_americas.py  ft_future_of_ai.py  gartner.py  genai_hyperautomation_finance.py  genai_marketing_summit.py  generic.py  google_io.py  gtc.py  (+23 more)
src/ai_events/templates/: report.html.j2
