[project]
name = "ai-events"
version = "0.1.0"
description = "Weekly AI events report (US + International) with emerging flagships"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "selectolax>=0.3.21",
  "jinja2>=3.1",
  "pydantic>=2.8",
  "python-dateutil>=2.9"
]

[project.scripts]
ai-events = "ai_events.cli:main"

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
